--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.8",
     "com.unity.visualscripting": "1.8.0",
+    "com.unity.xr.arfoundation": "5.0.7",
     "com.unity.xr.interaction.toolkit": "2.4.3",
     "com.unity.xr.oculus": "4.0.0",
     "com.unity.xr.openxr": "1.8.2",
