--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "com.unity.cloud.draco": "5.1.4",
     "com.unity.collab-proxy": "2.4.3",
+    "com.unity.collections": "2.2.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
